# PX4-Autopilot

boards/px4/sitl/: default.px4board
src/modules/visual_slam/: CMakeLists.txt  Kconfig  VisualSlam.cpp  VisualSlam.hpp
src/modules/visual_slam/UKF/: CMakeLists.txt  UKF.cpp  UKF.h
src/modules/visual_slam/UKF/math/: coordinates.cpp  coordinates.h
src/modules/visual_slam/UKF/sensor/: GPS.cpp  GPS.h
src/modules/visual_slam/UKF/state/: Position.cpp  Position.h  Position_NED.cpp  Position_NED.h  State.h  Velocity.cpp  Velocity.h
src/modules/visual_slam/doc/: architecture.md  flow.puml
src/modules/visual_slam/strapdown/: CMakeLists.txt  earth_model.cpp  earth_model.h  entities.h  strap_down.cpp  strap_down.h
